[ADD] javascript intersection observer

--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
         <a>Contactanos </a>
       </div>
     </div>
+    <div class="content"></div>
+    <script src="navbar.js"></script>
   </body>
 </html>
