--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/src/styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap" rel="stylesheet">
@@ -12,8 +12,8 @@
   <body>
       <div id="navbar-container">
         <div id="navbar-logo-container">
-          <img id="logo-blanco" src="/logo_blanco_svg.svg" alt="GlobalGAAP" style="display: block;">
-          <img id="logo-color" src="/logo_color_svg.svg" alt="GlobalGAAP" style="display: none;">
+          <img id="logo-blanco" src="/src/assets/icons/logo_blanco_svg.svg" alt="GlobalGAAP" style="display: block;">
+          <img id="logo-color" src="/src/assets/icons/logo_color_svg.svg" alt="GlobalGAAP" style="display: none;">
         </div>
         <ul id="navbar-list">
           <li>Inicio</li>
@@ -28,6 +28,6 @@
       </div>
       <div id="scroll-container">
       </div>
-      <script src="script.js"></script>
+      <script src="/src/index.js"></script>
   </body>
 </html>
