--- a/index.html
+++ b/index.html
@@ -3,31 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/src/styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/src/styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,600&display=swap"
+      rel="stylesheet"
+    />
     <title>navbar</title>
   </head>
   <body>
-      <div id="navbar-container">
-        <div id="navbar-logo-container">
-          <img id="logo-blanco" src="/src/assets/icons/logo_blanco_svg.svg" alt="GlobalGAAP" style="display: block;">
-          <img id="logo-color" src="/src/assets/icons/logo_color_svg.svg" alt="GlobalGAAP" style="display: none;">
-        </div>
-        <ul id="navbar-list">
-          <li>Inicio</li>
-          <li>Nuestro Equipo</li>
-          <li>Quienes Somos</li>
-          <li>Libros</li>
-          <li>Blogs</li>
-        </ul>
-        <div id="navbar-button-container">
-          <button id="navbar-button">Contáctanos</button>
-        </div>
+    <!-- NavBar -->
+    <div id="navbar-container">
+      <div id="navbar-logo-container">
+        <img
+          id="logo-blanco"
+          src="/src/assets/icons/logo_blanco_svg.svg"
+          alt="GlobalGAAP"
+          style="display: block"
+        />
+        <img
+          id="logo-color"
+          src="/src/assets/icons/logo_color_svg.svg"
+          alt="GlobalGAAP"
+          style="display: none"
+        />
       </div>
-      <div id="scroll-container">
+      <ul id="navbar-list">
+        <li>Quienes Somos</li>
+        <li>Nuestro Equipo</li>
+        <li>Inversiones</li>
+        <li>Blogs</li>
+      </ul>
+      <div id="navbar-button-container">
+        <button id="navbar-button">Contáctanos</button>
       </div>
-      <script src="/src/index.js"></script>
+    </div>
+    <script src="/src/index.js"></script>
+    <!-- NavBar -->
+
+    <!-- Hero -->
+    <div id="hero-container">
+      <div id="titles">
+        <p id="title-one">Seamos equipo</p>
+        <p id="title-two">Alcanza tus objetivos f inancieros</p>
+        <p id="title-three">
+          Contabilidad, Consultoria y Auditoria especializada
+        </p>
+      </div>
+    </div>
+    <!-- Hero -->
+
+    <!-- Miembros orgullosos -->
+    <div id="slide-miembros-orgullosos"></div>
+    <!-- Miembros orgullosos -->
   </body>
 </html>
