[ADD] Members - Our Story HTML & CSS

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li>Blogs</li>
       </ul>
       <div id="navbar-button-container">
-        <button id="navbar-button">Contáctanos</button>
+        <button id="GlobalGAAP-button">Contáctanos</button>
       </div>
     </div>
     <script src="/src/index.js"></script>
@@ -51,11 +51,42 @@
           Contabilidad, Consultoria y Auditoria especializada
         </p>
       </div>
+      <button id="GlobalGAAP-button">Empecemos</button>
     </div>
     <!-- Hero -->
 
     <!-- Miembros orgullosos -->
-    <div id="slide-miembros-orgullosos"></div>
+    <div id="slide-miembros-orgullosos">
+      <h2>Miembros Orgullosos de:</h2>
+      <img
+        id="icons-company"
+        src="/src/assets/img/icons-company.png"
+        alt="members"
+      />
+    </div>
     <!-- Miembros orgullosos -->
+
+    <!-- Quienes Somos -->
+    <div id="our-story-container">
+      <img
+        id="our-story-video"
+        src="/src/assets/img/our-story-video.png"
+        alt="our-story-video"
+      />
+      <div id="our-story-text">
+        <h2>Quienes Somos</h2>
+        <h1>Mas sobre GlobalGAAP</h1>
+        <h3>
+          Desde 2012 nuestro objetivo principal ha sido ayudar a nuestros
+          clientes a administrar sus finanzas e impuestos, para ayudarlas a
+          ahorrar dinero y tiempo.
+        </h3>
+        <button id="GlobalGAAP-button">Conoce mas</button>
+      </div>
+    </div>
+    <!-- Quienes Somos -->
+
+    <!-- Nuestro Equipo -->
+    <!-- Nuestro Equipo -->
   </body>
 </html>
