[ADD] team HTML & CSS

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <!-- Hero -->
 
-    <!-- Miembros orgullosos -->
+    <!-- Members -->
     <div id="slide-miembros-orgullosos">
       <h2>Miembros Orgullosos de:</h2>
       <img
@@ -64,9 +64,9 @@
         alt="members"
       />
     </div>
-    <!-- Miembros orgullosos -->
+    <!-- Members -->
 
-    <!-- Quienes Somos -->
+    <!-- Our Story -->
     <div id="our-story-container">
       <img
         id="our-story-video"
@@ -84,9 +84,66 @@
         <button id="GlobalGAAP-button">Conoce mas</button>
       </div>
     </div>
-    <!-- Quienes Somos -->
+    <!-- Our Story -->
 
     <!-- Nuestro Equipo -->
+    <div id="team-container">
+      <h2>Nuestro Equipo</h2>
+      <div id="teams">
+        <div id="team-a">
+          <div id="team-img-a"></div>
+          <p id="team-name">Alejandro Romero</p>
+          <p id="team-position">Impuestos</p>
+          <ul id="team-description">
+            <li>Simplifique sus impuestos.</li>
+            <li>Declaraciones de empresas y personas.</li>
+            <li>Entendimiento de los impuestos para decisiones de negocios.</li>
+            <li>Asesoría en proyectos especiales.</li>
+          </ul>
+          <a href="https://www.linkedin.com/in/alejandro-romero-infante/"
+            >Linkedin</a
+          >
+        </div>
+        <div id="team-b">
+          <div id="team-img-b"></div>
+          <p id="team-name">Beiky Cardozo</p>
+          <p id="team-position">Auditoría y Revisoría Fiscal</p>
+          <ul id="team-description">
+            <li>Asegurar el cumplimiento tributario.</li>
+            <li>Evaluamos sus controles internos.</li>
+            <li>Encontramos mejoras en sus procesos.</li>
+            <li>HBII y auditorías externas, reportamos en inglés y alemán.</li>
+          </ul>
+          <a href="https://www.linkedin.com/in/beikycardozo/">Linkedin</a>
+        </div>
+        <div id="team-c">
+          <div id="team-img-c"></div>
+          <p id="team-name">Andrés Latorre</p>
+          <p id="team-position">Director de Auditoría</p>
+          <ul id="team-description">
+            <li>Trabaje con expertos.</li>
+            <li>Utilice las oportunidades.</li>
+            <li>Presentamos diferentes puntos de vista.</li>
+            <li>Escogemos la mejor opción para resolver su problema.</li>
+          </ul>
+          <a href="https://www.linkedin.com/in/andres-latorre-244583141/"
+            >Linkedin</a
+          >
+        </div>
+        <div id="team-d">
+          <div id="team-img-d"></div>
+          <p id="team-name">Cristian Palacios</p>
+          <p id="team-position">Director de Outsourcing BPO</p>
+          <ul id="team-description">
+            <li>Ahorre tiempo y dinero.</li>
+            <li>Mejore sus decisiones y eficiencia fiscal.</li>
+            <li>Asegure su cumplimiento normativo.</li>
+            <li>Las cifras de sus informes "hablan sobre su negocio".</li>
+          </ul>
+          <a href="https://www.linkedin.com/in/cristianpalaciosm/">Linkedin</a>
+        </div>
+      </div>
+    </div>
     <!-- Nuestro Equipo -->
   </body>
 </html>
